sumo/tests/duarouter/routes/style2_input/errors/vehicle_false_departspeed/errors.duarouter
Error: Invalid departSpeed definition for vehicle '0'
Quitting (on error).
